load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("@com_github_davido_bazlets//tools:junit.bzl", "junit_tests")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "main",
    srcs = glob(
        ["src/main/java/com/solver/*.java"]
    ),
)

java_library(
    name = "test",
    srcs = glob(
        ["src/test/java/com/solver/*.java"]
    ),
    deps = [
        ":main",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core"
    ]
)

junit_tests(
    name = "testSuite",
    srcs = glob(
        ["src/test/java/**/*.java"]
    ),
    deps = [
        ":main",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core"
    ]
)
