load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "main",
    srcs = glob(
        ["src/main/java/solver/*.java"]
    ),
)

java_binary(
    name = "bin",
    main_class = "solver.Main",
    runtime_deps = [
        ":main"
    ]
)

java_test(
    name = "test",
    srcs = glob(
        ["src/test/java/solver/*.java"]
    ),
    test_class = "solver.MainTest",
    deps = [
        ":main"
    ]
)
