load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "main",
    srcs = glob(
        ["src/main/java/solver/*.java"]
    ),
)

java_test(
    name = "test",
    srcs = glob(
        ["src/test/java/solver/*.java"]
    ),
    test_class = "solver.MainTest",
    deps = [
        ":main",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core"
    ]
)
