load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("//tools/bzl:junit.bzl", "junit_tests")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "main",
    srcs = glob(
        ["src/main/java/**/*.java"]
    ),
)

junit_tests(
    name = "test",
    srcs = glob(
        ["src/test/java/**/*.java"]
    ),
    deps = [
        ":main",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core"
    ]
)