load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_binary(
    name = "main",
    srcs = glob(
        ["src/main/java/**/*.java"]
    ),
    main_class = "Main"
)

java_test(
    name = "test",
    srcs = glob(
        ["src/test/java/**/*.java", "src/main/java/**/*.java"]
    ),
    test_class = "MainTest",
)
